changed max width of equipment images to 30, to avoid clipping

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -223,6 +223,8 @@ table {
 img {
   border: 0;
   vertical-align: middle;
+  max-width: 30px;
+  height: auto;
 }
 
 .arrow-icon {
